Fix error in chmod part in Dockerfile

--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -48,7 +48,7 @@ RUN apt-get update \
     && docker-php-ext-enable mcrypt
 
 RUN   \
-   && chmod 777 /var/log \
+   chmod 777 /var/log \
    && chmod 777 /var/run \
    && chmod 777 /var/lock \
    && chmod 777 /bin/init_container.sh
