--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -43,6 +43,7 @@ RUN apt-get update \
     && docker-php-ext-enable imagick \
     && docker-php-ext-enable mcrypt
 
+COPY motd /etc/motd
 COPY init_container.sh /bin/
 
 RUN   \
