--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -7,16 +7,30 @@ RUN a2ensite default-ssl
 # install the PHP extensions we need
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-         libpng-dev \
-         libjpeg-dev \
-         libpq-dev \
-         libmcrypt-dev \
-         libldap2-dev \
-         libldb-dev \
-         libicu-dev \
-         libgmp-dev \
-         libmagickwand-dev \
-         openssh-server vim curl wget tcptraceroute \
+        libpng-dev \
+        libjpeg-dev \
+        libpq-dev \
+        libmcrypt-dev \
+        libldap2-dev \
+        libldb-dev \
+        libicu-dev \
+        libgmp-dev \
+        libmagickwand-dev \
+        build-essential \
+        libssl-dev \
+        openssh-server \
+        ca-certificates \
+        git \
+        vim \
+        nano \
+        curl \
+        wget \
+        inetutils-ping \
+        screen \
+        bash-completion \
+        mysql-client \
+        postgresql-client \
+        ssl-cert \
     && ln -s /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/libldap.so \
     && ln -s /usr/lib/x86_64-linux-gnu/liblber.so /usr/lib/liblber.so \
     && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
@@ -25,24 +39,25 @@ RUN apt-get update \
     && pecl install mcrypt-1.0.1 \
     && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
     && docker-php-ext-install gd \
-         mysqli \
-         opcache \
-         pdo \
-         pdo_mysql \
-         pdo_pgsql \
-         pgsql \
-         ldap \
-         intl \
-         gmp \
-         zip \
-         bcmath \
-         mbstring \
-         pcntl \
-         xml \
-         simplexml \
-         exif \
+        mysqli \
+        opcache \
+        pdo \
+        pdo_mysql \
+        pdo_pgsql \
+        pgsql \
+        ldap \
+        intl \
+        gmp \
+        zip \
+        bcmath \
+        mbstring \
+        pcntl \
+        xml \
+        simplexml \
+        exif \
     && docker-php-ext-enable imagick \
-    && docker-php-ext-enable mcrypt
+    && docker-php-ext-enable mcrypt \
+    && make-ssl-cert generate-default-snakeoil
 
 COPY motd /etc/motd
 COPY vhost.conf /etc/apache2/sites-available/000-default.conf
@@ -56,20 +71,20 @@ RUN   \
    && chmod 777 /bin/init_container.sh
 
 RUN { \
-                echo 'opcache.memory_consumption=128'; \
-                echo 'opcache.interned_strings_buffer=8'; \
-                echo 'opcache.max_accelerated_files=4000'; \
-                echo 'opcache.revalidate_freq=60'; \
-                echo 'opcache.fast_shutdown=1'; \
-                echo 'opcache.enable_cli=1'; \
+            echo 'opcache.memory_consumption=128'; \
+            echo 'opcache.interned_strings_buffer=8'; \
+            echo 'opcache.max_accelerated_files=4000'; \
+            echo 'opcache.revalidate_freq=60'; \
+            echo 'opcache.fast_shutdown=1'; \
+            echo 'opcache.enable_cli=1'; \
     } > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
 RUN { \
-                echo 'error_log=/var/log/apache2/php-error.log'; \
-                echo 'display_errors=Off'; \
-                echo 'log_errors=On'; \
-                echo 'display_startup_errors=Off'; \
-                echo 'date.timezone=Europe/Berlin'; \
+            echo 'error_log=/var/log/apache2/php-error.log'; \
+            echo 'display_errors=Off'; \
+            echo 'log_errors=On'; \
+            echo 'display_startup_errors=Off'; \
+            echo 'date.timezone=Europe/Berlin'; \
     } > /usr/local/etc/php/conf.d/php.ini
 
 ENV APACHE_RUN_USER www-data
