Add update-alternatives alias python for python2.7 to fix npm install in projects with python dependencies, without having to call npm config set python python2.7

--- a/5.6.36-apache/Dockerfile
+++ b/5.6.36-apache/Dockerfile
@@ -50,6 +50,7 @@ RUN apt-get update \
         mysql-client \
         postgresql-client \
         ssl-cert \
+    && update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1 \
     && ln -s /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/libldap.so \
     && ln -s /usr/lib/x86_64-linux-gnu/liblber.so /usr/lib/liblber.so \
     && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
