Add php extension sockets

--- a/5.6.36-apache/Dockerfile
+++ b/5.6.36-apache/Dockerfile
@@ -75,6 +75,7 @@ RUN apt-get update \
         xml \
         simplexml \
         exif \
+        sockets \
     && docker-php-ext-enable imagick \
     && make-ssl-cert generate-default-snakeoil
 
