--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -75,6 +75,7 @@ RUN apt-get update \
         xml \
         simplexml \
         exif \
+        sockets \
     && docker-php-ext-enable imagick \
     && docker-php-ext-enable mcrypt \
     && make-ssl-cert generate-default-snakeoil
