Do not enable xdebug by default to improve performance

--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -77,7 +77,7 @@ RUN apt-get update \
         simplexml \
         exif \
         sockets \
-    && docker-php-ext-enable imagick mcrypt xdebug \
+    && docker-php-ext-enable imagick mcrypt \
     && make-ssl-cert generate-default-snakeoil
 
 COPY motd /etc/motd
