--- a/5.6.36-apache/Dockerfile
+++ b/5.6.36-apache/Dockerfile
@@ -44,6 +44,7 @@ RUN apt-get update \
         nano \
         curl \
         wget \
+        rsync \
         inetutils-ping \
         screen \
         bash-completion \
