--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -44,6 +44,7 @@ RUN apt-get update \
         nano \
         curl \
         wget \
+        rsync \
         inetutils-ping \
         screen \
         bash-completion \
