Enable for gd: freetype, webp, jpeg62, xpm support

--- a/7.2.1-apache/Dockerfile
+++ b/7.2.1-apache/Dockerfile
@@ -27,6 +27,10 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         libpng-dev \
         libjpeg-dev \
+        libwebp-dev \
+        libjpeg62-turbo-dev \
+        libxpm-dev \
+        libfreetype6-dev \
         libpq-dev \
         libmcrypt-dev \
         libldap2-dev \
@@ -60,7 +64,15 @@ RUN apt-get update \
     && pecl install imagick-beta \
     && pecl install mcrypt-1.0.1 \
     && pecl install xdebug \
-    && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
+    && docker-php-ext-configure gd \
+        --with-gd \
+        --with-webp-dir \
+        --with-jpeg-dir \
+        --with-png-dir \
+        --with-zlib-dir \
+        --with-xpm-dir \
+        --with-freetype-dir \
+        --enable-gd-native-ttf \
     && docker-php-ext-install gd \
         mysqli \
         opcache \
