--- a/5.6-apache/Dockerfile
+++ b/5.6-apache/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2.1-apache
+FROM php:5.6-apache
 MAINTAINER joschi127 <127.joschi@gmail.com>
 
 # Environment variables that can be changed on runtime
@@ -62,8 +62,6 @@ RUN apt-get update \
     && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
     && rm -rf /var/lib/apt/lists/* \
     && pecl install imagick-beta \
-    && pecl install mcrypt-1.0.1 \
-    && pecl install xdebug \
     && docker-php-ext-configure gd \
         --with-gd \
         --with-webp-dir \
@@ -86,13 +84,14 @@ RUN apt-get update \
         zip \
         bcmath \
         mbstring \
+        mcrypt \
         pcntl \
         xml \
         simplexml \
         exif \
         sockets \
         soap \
-    && docker-php-ext-enable imagick mcrypt \
+    && docker-php-ext-enable imagick \
     && make-ssl-cert generate-default-snakeoil
 
 COPY motd /etc/motd
