Update 7.3 image, add libzip-dev to fix image build

--- a/7.3-apache/Dockerfile
+++ b/7.3-apache/Dockerfile
@@ -39,6 +39,7 @@ RUN apt-get update \
         libgmp-dev \
         libmagickwand-dev \
         libxml2-dev \
+        libzip-dev \
         build-essential \
         libssl-dev \
         openssh-server \
