Install unzip - recommended for composer

--- a/5.6-apache/Dockerfile
+++ b/5.6-apache/Dockerfile
@@ -50,6 +50,7 @@ RUN apt-get update \
         curl \
         wget \
         rsync \
+        unzip \
         inetutils-ping \
         screen \
         bash-completion \
