--- a/7.2-apache/Dockerfile
+++ b/7.2-apache/Dockerfile
@@ -50,6 +50,7 @@ RUN apt-get update \
         curl \
         wget \
         rsync \
+        unzip \
         inetutils-ping \
         screen \
         bash-completion \
