--- a/7.1-apache/Dockerfile
+++ b/7.1-apache/Dockerfile
@@ -52,6 +52,7 @@ RUN apt-get update \
         rsync \
         unzip \
         inetutils-ping \
+        tcptraceroute \
         screen \
         bash-completion \
         mariadb-client \
