Add PHP extension sysvsem

--- a/7.1-apache/Dockerfile
+++ b/7.1-apache/Dockerfile
@@ -58,6 +58,7 @@ RUN apt-get update \
         mariadb-client \
         postgresql-client \
         ssl-cert \
+        sysvsem \
     && update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1 \
     && ln -s /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/libldap.so \
     && ln -s /usr/lib/x86_64-linux-gnu/liblber.so /usr/lib/liblber.so \
