--- a/7.2-apache/Dockerfile
+++ b/7.2-apache/Dockerfile
@@ -94,6 +94,7 @@ RUN apt-get update \
         exif \
         sockets \
         soap \
+        sysvsem \
     && docker-php-ext-enable imagick mcrypt \
     && make-ssl-cert generate-default-snakeoil
 
