--- a/5.6-apache/Dockerfile
+++ b/5.6-apache/Dockerfile
@@ -93,6 +93,7 @@ RUN apt-get update \
         exif \
         sockets \
         soap \
+        sysvsem \
     && docker-php-ext-enable imagick \
     && make-ssl-cert generate-default-snakeoil
 
