--- a/7.3-apache/Dockerfile
+++ b/7.3-apache/Dockerfile
@@ -95,6 +95,7 @@ RUN apt-get update \
         exif \
         sockets \
         soap \
+        sysvsem \
     && docker-php-ext-enable imagick mcrypt \
     && make-ssl-cert generate-default-snakeoil
 
