--- a/7.2-apache/Dockerfile
+++ b/7.2-apache/Dockerfile
@@ -44,6 +44,7 @@ RUN apt-get update \
         openssh-server \
         ca-certificates \
         python2.7 \
+        imagemagick \
         git \
         vim \
         nano \
