Add webp support for 7.3 image

--- a/7.3-apache/Dockerfile
+++ b/7.3-apache/Dockerfile
@@ -45,6 +45,7 @@ RUN apt-get update \
         openssh-server \
         ca-certificates \
         python2.7 \
+        webp \
         imagemagick \
         git \
         vim \
