Fix openssl dependency for 7.3 image

--- a/7.3-apache/Dockerfile
+++ b/7.3-apache/Dockerfile
@@ -43,6 +43,7 @@ RUN apt-get update \
         build-essential \
         libssl-dev \
         openssh-server \
+        openssl \
         ca-certificates \
         python2.7 \
         webp \
